# arbor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json
.cargo/: config.toml
.github/: FUNDING.yml
crates/arbor-auth/: Cargo.toml
crates/arbor-auth/src/: error.rs  html.rs  lib.rs  pkce.rs  types.rs
crates/arbor-auth/src/oauth2/: device_flow.rs  installed_app.rs  mod.rs  refresh.rs
crates/arbor-cloud/: Cargo.toml
crates/arbor-cloud/src/: auth_gcs.rs  error.rs  host.rs  lib.rs  oauth_google.rs  operator.rs  ops.rs  secrets.rs  transfer.rs  types.rs
crates/arbor-process-ext/: Cargo.toml
crates/arbor-process-ext/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: branding.rs  deep_link.rs  error.rs  jobs.rs  lib.rs  main.rs  platform.rs  plugin_logs.rs  process_ext.rs  taskbar_icon_refresh.rs
src-tauri/src/auth/: credential_store.rs  device_flow.rs  mod.rs  oauth_jira.rs  oauth_linear.rs
src-tauri/src/brp/: client.rs  mod.rs  sse.rs
src-tauri/src/cloud/: auth_gcs.rs  mod.rs  oauth_google.rs  operator.rs  ops.rs  secrets.rs  transfer.rs  types.rs
src-tauri/src/commands/: app_commands.rs  auth_commands.rs  avatar_commands.rs  bisect_commands.rs  branch_commands.rs  branding_commands.rs  brp_commands.rs  cloud_commands.rs  config_commands.rs  deep_link_commands.rs  diff_commands.rs  fs_commands.rs  git_cli_commands.rs  gitflow_commands.rs  graph_commands.rs  issues_commands.rs  job_commands.rs  linked_worktree_commands.rs  marketplace_commands.rs  merge_commands.rs  missing_commands.rs  mod.rs  mr_commands.rs  notes_commands.rs  pipeline_commands.rs  plugin_commands.rs  plugin_logs_commands.rs  plugin_template_commands.rs  rebase_commands.rs  recovery_commands.rs  reflog_commands.rs  remote_commands.rs  repo_browser_commands.rs  repo_commands.rs  reset_commands.rs  ron_studio_commands.rs  search_commands.rs  security_commands.rs  session_commands.rs  stage_commands.rs  (+9 more)
src-tauri/src/config/: app_config.rs  mod.rs  repo_config.rs
src-tauri/src/git/: bisect.rs  bisect_sessions.rs  branch.rs  diff.rs  encoding.rs  gitflow.rs  graph.rs  init.rs  merge.rs  mod.rs  notes.rs  rebase.rs  recovery.rs  reflog.rs  remote.rs  repo.rs  search.rs  stash.rs  stats.rs  stats_export.rs  status.rs  submodule.rs  svg_export.rs  ticket_links.rs  url.rs  worktree.rs
src-tauri/src/git_cli/: mod.rs
src-tauri/src/git_provider/: avatar_lookup.rs  ci_impl.rs  detect.rs  helpers.rs  mod.rs  mr_impl.rs  registry.rs  repo_impl.rs  security_export.rs  security_impl.rs
src-tauri/src/git_provider/github/: api.rs  auth.rs  ci.rs  issues.rs  mod.rs  mr.rs  releases.rs  repo.rs  security.rs  webhooks.rs
src-tauri/src/git_provider/gitlab/: api.rs  auth.rs  ci.rs  issues.rs  mod.rs  mr.rs  releases.rs  repo.rs  security.rs  webhooks.rs
src-tauri/src/git_provider/oauth/: github.rs  github_flow.rs  gitlab.rs  gitlab_flow.rs  mod.rs
src-tauri/src/git_provider/types/: auth.rs  branch.rs  capability.rs  ci.rs  error.rs  issue.rs  mod.rs  mr.rs  release.rs  repo.rs  security.rs  webhook.rs
src-tauri/src/integrations/: jira.rs  jira_types.rs  linear.rs  mod.rs
src-tauri/src/json_studio/: ast.rs  backend_impl.rs  bulk_edits.rs  edits.rs  mod.rs  schema.rs
src-tauri/src/linked_worktrees/: aliases.rs  mod.rs  orchestrator.rs
src-tauri/src/marketplace/: cache.rs  fetcher.rs  installer.rs  installs.rs  mod.rs  scheduler.rs  types.rs  user_registry.rs
src-tauri/src/pipeline/: builtin.rs  condition.rs  condition_parser.rs  mod.rs  vars.rs
src-tauri/src/plugin/: contribution.rs  event_bus.rs  hook_catalog.rs  hook_registry.rs  lua_ctx.rs  mod.rs  sandbox.rs  settings_store.rs  toolchain.rs  tree.rs
src-tauri/src/plugin/api/: ctx.rs  mod.rs
src-tauri/src/plugin/api/helpers/: contrib_write.rs  convert.rs  fs_perm.rs  glob.rs  http_worker.rs  json_patch.rs  mod.rs  settings_scope.rs  timer.rs  tuple.rs  xml_patch.rs
src-tauri/src/plugin/api/ns/: brp.rs  ci.rs  cloud.rs  command.rs  contribution.rs  events.rs  fs.rs  hooks.rs  http.rs  issues.rs  job.rs  json.rs  json_studio.rs  keybinding.rs  linked_worktrees.rs  log.rs  meta.rs  mod.rs  mr.rs  notes.rs  notify.rs  pipeline.rs  properties_studio.rs  repo.rs  ron_studio.rs  scheduler.rs  security.rs  service.rs  settings.rs  tabs.rs  terminal.rs  text.rs  timer.rs  toml_studio.rs  toolchain.rs  workspace.rs  yaml_studio.rs
src-tauri/src/plugin/api/ns/ui/: activity_bar.rs  autocomplete.rs  branding.rs  confirm.rs  container.rs  contribute.rs  form.rs  icon.rs  misc.rs  mod.rs  operation.rs  pick_file.rs  settings_form.rs  sugar.rs  tree.rs
src-tauri/src/plugin/lua_builtins/: async_lib.lua  builders.lua  event.lua  promise_bridge.lua  schema.lua
src-tauri/src/plugin/lua_builtins/core/: _util.lua  assert.lua  edit.lua
src-tauri/src/plugin/runtime/: consts.rs  loaded.rs  mod.rs
src-tauri/src/plugin/runtime/host/: dep_cascade.rs  hooks.rs  introspection.rs  lifecycle.rs  mod.rs  pipeline_op.rs  service.rs
src-tauri/src/plugin/runtime/manifest/: deps.rs  info.rs  mod.rs  permissions.rs  schedule.rs
src-tauri/src/plugin/runtime/scheduler/: mod.rs
src-tauri/src/properties_studio/: backend_impl.rs  mod.rs
src-tauri/src/ron_studio/: ast.rs  backend_impl.rs  mod.rs  schema.rs
src-tauri/src/studio/: config.rs  edit_expr.rs  index.rs  mod.rs
src-tauri/src/studio/format/: backend.rs  commands.rs  descriptor.rs  errors.rs  mod.rs  properties_codec.rs  registry.rs  types.rs
src-tauri/src/terminal/: mod.rs  registry.rs
src-tauri/src/toml_studio/: backend_impl.rs  mod.rs
src-tauri/src/workspace/: migration.rs  mod.rs  registry.rs  snapshot.rs  store.rs
src-tauri/src/yaml_studio/: backend_impl.rs  mod.rs
src-tauri/templates/plugin/: fallback_print.lua  hook_on_plugin_load.lua  luarc.json  main_header.lua
src-tauri/templates/plugin/recipes/: action_toolbar.lua  command.lua  http_get.lua  job_spawn.lua  keybinding.lua  modal.lua  notification.lua  scheduler.lua  settings_panel.lua  sidebar.lua
(+604 files in other folders)
