[package]
name        = "arbor"
description = "Arbor — Git GUI Client"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[lib]
name = "arbor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ── Cargo features ──────────────────────────────────────────────────────────
# `deep-link-dev` toggles activation of BOTH the deep-link plugin and its
# `single-instance` companion in **debug** builds.  Release builds always
# enable them (see the `cfg(any(not(debug_assertions), feature = ...))`
# guards in lib.rs), independent of this feature — so removing it from
# `default` does NOT affect packaged builds.
#
# Default-OFF for dev: opt in with `cargo tauri dev --features deep-link-dev`.
# Release builds always activate the deep-link plugin (see the
# `cfg(any(not(debug_assertions), feature = ...))` guards in lib.rs).
[features]
default = []
deep-link-dev = []
# Bundle OpenSSL from source instead of linking against the system libssl.
# Activated by the release workflow on Linux + macOS so produced binaries
# don't depend on the runner's libssl version (and so the macOS x86_64 cross
# build on the arm64 runner finds the right OpenSSL for the target).
# Off by default to keep local dev incremental builds fast and avoid the
# Perl/CMake prerequisites the vendored build needs — on Windows this feature
# is a no-op since openssl-sys isn't in the dep graph (native-tls uses
# Schannel, libgit2 uses WinHTTP).
vendored-openssl = ["dep:openssl-sys"]

# NOTE — the [profile.release] section moved to the workspace root
# Cargo.toml (../Cargo.toml) when this crate became a workspace member.
# Cargo only honours profile sections at the workspace root and silently
# ignores them in member crates. The rationale for the chosen settings
# (panic=unwind, strip=debuginfo, debug=1) is preserved in the root file's
# comment block — see "[profile.release]" there.

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
# --- Arbor crates (split out of this crate, see ../Cargo.toml workspace) ---
arbor-process-ext = { path = "../crates/arbor-process-ext" }
arbor-cloud       = { path = "../crates/arbor-cloud" }
arbor-auth        = { path = "../crates/arbor-auth" }

# --- Tauri ---
tauri             = { workspace = true }
tauri-plugin-opener       = "2.5.4"
tauri-plugin-notification = "2.3.3"
# Deep-link `arbor://…` URL handling.  The `deep-link` feature of the
# single-instance plugin makes the second invocation forward its argv to
# the running instance (so opening a link never spawns a duplicate).
# Always pulled in — actual activation is `cfg`-gated in lib.rs (release
# always on; debug only with the `deep-link-dev` Cargo feature).
tauri-plugin-deep-link        = "2"
tauri-plugin-single-instance  = { version = "2", features = ["deep-link"] }

# --- Git ---
git2    = { version = "0.20.4", features = ["vendored-libgit2"] }
similar = { version = "2",    features = ["text", "unicode", "bytes", "inline"] }

# --- Plugin system ---
mlua = { version = "0.11.6", features = ["lua54", "vendored", "serialize", "send"] }

# --- Async ---
tokio        = { workspace = true }
# Used for `StreamExt::next()` when streaming HTTP bodies (e.g. attachment downloads).
futures-util = { workspace = true }
# Required by `git_provider::GitProvider` trait — async fns in traits via macro.
async-trait  = { workspace = true }

# --- Auth / HTTP ---
keyring = { workspace = true }
reqwest = { workspace = true }

# --- Serialization ---
serde      = { workspace = true }
serde_json = { workspace = true }
# SIMD-accelerated JSON parser. Used ONLY by the json_studio plugin namespace
# (`plugin/api/ns/json_studio.rs`) for parsing multi-MB documents into a lazy
# tree the JSON Studio modal navigates without blocking the UI. Earmarked to
# be removed once the JSON Studio plugin is migrated to the WASM plugin
# runtime — the dep moves into the plugin's own WASM module.
# See: memory/project_json_studio_plugin.md
simd-json       = "0.13"
# RFC 9535 JSONPath engine — powers the JSON Studio query bar (filters,
# slices, multi-select, regex match/search). Same WASM-migration earmark
# as simd-json above.
serde_json_path = "0.7"
# JSONC (JSON with comments) parser with byte-range AST — JSON Studio's
# editable doc model since Phase 3.b. Parses in strict-JSON mode for `.json`
# files; the same AST flips to relaxed mode (comments + trailing commas) in
# Phase 3.d for `.jsonc`. We use it strictly for the AST + byte ranges that
# drive position-preserving splice mutations — pure-data parses still go
# through `simd-json` (read-only views, multi-MB streaming) above.
jsonc-parser = { version = "0.32", features = ["serde"] }
# RON Studio originally pulled in the `ron` crate for parsing, but
# `ron::Value` officially doesn't support enums ("Value does not store
# them" per its own docs) — variant tags are dropped. Since RON's main
# appeal is tagged enums (`element: Dark`, `variant: Action(..)`) we
# ship a small custom AST parser in `src/ron_studio/ast.rs` instead,
# which preserves variant tags. The `ron` crate is therefore NOT a host
# dependency.
# Rust source parser used by RON Studio's "Load schema from .rs" feature
# (`ron_studio/schema.rs`) — walks an entire crate from its Cargo.toml,
# extracts struct/enum definitions, resolves `mod`/`use`/aliases, and
# computes the reachable type closure from a chosen root type. `extra-traits`
# enables `PartialEq`/`Eq`/`Hash` on AST nodes which simplifies cycle
# detection during BFS. No native deps.
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
# Pretty-printer for `syn` AST → readable Rust source. Used by RON Studio's
# "View implementation" feature so the user can see the actual definition
# of a struct/enum referenced anywhere in their RON file.
prettyplease = "0.2"
quote = "1"
# Encoding-aware decode/encode for legacy text files in conflict resolution
# (windows-1252 / Latin-1 sources still common in older Java codebases on
# Windows). Round-trips bytes ↔ String preserving the original encoding.
encoding_rs = "0.8"
# Structured file edits exposed as `arbor.fs.json_set / yaml_set / toml_set /
# xml_set` for plugins that need reliable cross-platform config editing
# inside a LuaOp pipeline step (see src/plugin/api.rs + src/pipeline).
# Also used by `yaml_studio` for the JSON projection (tree / JSONPath
# query): multi-doc streams parse via `serde_yaml_ng::Deserializer` and
# project to `serde_json::Value`. Editing / save goes through
# `yaml_edit` below, NOT through this crate — `serde_yaml_ng` would lose
# comments and reformat on round-trip. Maintained fork of the archived
# `serde_yaml` (replaces the unmaintained/unsound `serde_yml` + `libyml`
# stack flagged by GHSA-hhw4-xg65-fp2x / GHSA-gfxp-f68g-8x78).
serde_yaml_ng = "0.10"
# `yaml_edit` — lossless YAML AST built on rowan (same syntax-tree
# engine used by rust-analyzer + `toml_edit`). Used by `yaml_studio`
# (Phase 5.b) as the source-of-truth for the editable Studio modal:
# mutations clone the `Document`, set/insert/remove on the typed
# wrappers, and re-emit through `Display`. Comments, whitespace,
# quote style, anchors, and tags survive the round-trip.
yaml-edit = "0.2"
quick-xml  = { version = "0.36", features = ["serialize"] }
base64     = { workspace = true }
sha2       = { workspace = true }

# --- Config / paths ---
dirs   = { workspace = true }
toml   = "0.8"
# `toml_edit` — lossless TOML AST that preserves comments / whitespace /
# inline-vs-block formatting natively. Used by `toml_studio` (Phase 4)
# for the editable Studio modal. The `toml` crate at 0.8 internally
# uses `toml_edit ~0.22`, so pinning the same major aligns the version
# in `Cargo.lock`.
toml_edit = "0.22"
semver = "1"

# --- Scheduling ---
# 6-field Spring-style cron expressions (sec min hour day month day-of-week)
# parsed by `arbor.scheduler.register` triggers in plugin Lua.
cron = "0.13"

# --- File watch ---
notify = "6"

# --- Error handling ---
thiserror = { workspace = true }

# --- Logging ---
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# --- Terminal / PTY ---
portable-pty = "0.8"

# --- Misc ---
# zip — used by plugin import/export (template bundles + sideload installs).
zip          = "2"
# sevenz-rust2 — pure-Rust 7z reader. Used to extract the PortableGit
# `.7z.exe` self-extracting archive without launching its bundled 7-Zip GUI
# (which would pop a visible "extracting…" dialog the user mistakes for a
# Git-for-Windows installer). See `git_cli::download_portable`.
sevenz-rust2 = "0.17"
uuid     = { workspace = true }
chrono   = { version = "0.4", features = ["serde"] }
libc     = "0.2"
regex    = { workspace = true }
# HTML sanitizer for issue tracker rendered descriptions/comments (Jira renderedFields).
ammonia  = "4"

# --- Cloud storage (cloud-storage plugin) ---
# opendal + the aws-lc-sys NASM-prebuilt pin live in `crates/arbor-cloud` as
# of the Phase A split. The plugin host command layer (`commands/cloud_commands.rs`
# + `plugin/api/ns/cloud.rs`) consumes the cloud crate via `arbor-cloud` above.
# Same WASM-migration earmark applies — when the WASM plugin runtime lands,
# the cloud crate + cloud_commands + ns/cloud.rs all get deleted together.

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",                   # BOOL, HANDLE, CloseHandle — base types
  "Win32_System_Threading",             # EcoQoS — SetProcessInformation, SetPriorityClass
  "Win32_System_Diagnostics_ToolHelp",  # EcoQoS — apply throttling to child processes (WebView2 renderers)
  "Win32_Storage_FileSystem",           # FilePickerModal — GetLogicalDrives (enumerate drive letters)
] }

# Optional, target-gated openssl-sys. Activated by the `vendored-openssl`
# Cargo feature (see `[features]`). Listed here under `cfg(not(windows))`
# so enabling the feature on Windows is a true no-op — neither the dep nor
# the OpenSSL source compile run, and Windows builds never require Perl.
# When the feature IS active (Linux + macOS release CI), Cargo feature
# unification propagates `vendored` to every other consumer of openssl-sys
# in the dep graph (git2, libssh2-sys, reqwest's native-tls on Linux), so
# OpenSSL is built from source for the right target.
[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }
