[package]
name         = "arbor-auth"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
description  = "OAuth2 (installed-app + refresh + device-flow) building blocks for Arbor."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }

base64 = { workspace = true }
sha2   = { workspace = true }
uuid   = { workspace = true }
