[package]
name         = "arbor-process-ext"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
description  = "std::process::Command extension trait: suppress console window on Windows."

[dependencies]
